Taking some shots of plums with guardians - being in christmas happiness on second computer.
  - Need to plant more plums, supplies of shots are rapidly decreasing ...

--- a/Day4/Day4.csproj
+++ b/Day4/Day4.csproj
@@ -47,11 +47,7 @@
     <None Include="input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TextFile1.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="inputtest" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
