--- a/2020/CMakeLists.txt
+++ b/2020/CMakeLists.txt
@@ -7,3 +7,13 @@ add_executable(day01 day01.cpp)
 configure_file(day01.dat day01.dat COPYONLY)
 configure_file(day01.test day01.test COPYONLY)
 
+add_executable(day01 day01.cpp)
+add_executable(day02 day02.cpp)
+add_executable(day03 day03.cpp)
+add_executable(day04 day04.cpp)
+add_executable(day05 day05.cpp)
+add_executable(day06 day06.cpp)
+add_executable(day07 day07.cpp)
+add_executable(day08 day08.cpp)
+add_executable(day09 day09.cpp)
+add_executable(day10 day10.cpp)
