--- a/2020/CMakeLists.txt
+++ b/2020/CMakeLists.txt
@@ -14,6 +14,9 @@ configure_file(day02.dat day02.dat COPYONLY)
 configure_file(day02.test day02.test COPYONLY)
 
 add_executable(day03 day03.cpp)
+configure_file(day03.dat day03.dat COPYONLY)
+configure_file(day03.test day03.test COPYONLY)
+
 add_executable(day04 day04.cpp)
 add_executable(day05 day05.cpp)
 add_executable(day06 day06.cpp)
